crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@try_catch_stack.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/try_catch_stack.pcode
---
ConstantPool "bad", "oh noes!", "foo", "caught: ", "e"
Push constant0
DefineFunction "", 0 {
Push constant1
Throw
}
DefineLocal
Push constant2
DefineFunction "", 0 {
Try "e" {
Push 1
Push 1
Push 0
Push constant0
CallFunction
Add2
Add2
Return
}
Catch {
Push constant3
Push constant4
GetVariable
Add2
Trace
Push 5
Return
}
}
DefineLocal
Push 0
Push constant2
CallFunction
Trace
Push 0
Push constant2
CallFunction
Push 0
Push constant2
CallFunction
Add2
Trace
