crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@with.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/with.pcode
---
ConstantPool "foo", "createEmptyMovieClip", "", "_name"
Push 1
Push constant0
Push 2
Push constant1
CallFunction
Pop
Push constant2
Push 13
GetProperty
Trace
Push constant0
GetVariable
With {
Push constant3
GetVariable
Trace
}
Push constant0
GetVariable
With {
Push constant3
GetVariable
Trace
}
